Fix layout bugs

--- a/src/Components/Main/Main.scss
+++ b/src/Components/Main/Main.scss
@@ -161,6 +161,13 @@ main {
         width: 90%;
         height: 90%;
     }
+
+    .textComparisonArea {
+        textarea {
+            width: 100%;
+            height: 432px;
+        }
+    }
 }
 
 @media (max-width: 500px) {
@@ -195,7 +202,7 @@ main {
 
     .textComparisonArea {
         width: 100%;
-        height: 444px;
+        height: 400px;
 
         display: flex;
         flex-direction: column;
