--- a/src/Components/Sidebar/3. Profile/Profile.scss
+++ b/src/Components/Sidebar/3. Profile/Profile.scss
@@ -1,4 +1,5 @@
 .profile {
+    overflow: hidden;
     width: 100%;
     height: 10%;
 
