--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    justify-content: space-between;
 
     overflow-y: scroll;
     overflow-x: hidden;
@@ -26,7 +27,6 @@
 
 .DesktopSideBar_content {
     width: 90%;
-    height: 90%;
 }
 
 .MobileSideBar {
